--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,10 +22,11 @@
 <div class="row">
   <div class="col-xs-2"></div>
   <div class="col-xs-8">
-    <h3>Journal Entries:</h3>
-    <div class="panel panel-default">
-    <div class="panel-body">
-      <ul>{% if entries %}
+      {% if entries %}
+        <h3>Journal Entries:</h3>
+        <div class="panel panel-default">
+        <div class="panel-body">
+        <ul>
         {% for entry in entries %}
         <li>{{ entry.created_at.strftime('%Y-%m-%d') }}:<br> {{ entry.comment }}
           <br></li>
