--- a/templates/base.html
+++ b/templates/base.html
@@ -23,41 +23,16 @@
       }
   </style>
 
-
-    </style>
 </head>
 
+{% if session['user_id'] %}
+    {% include 'nav_bar_logged_in.html' %}
+
+{% else %}
+    {% include 'nav_bar_not_logged_in.html' %}
+
+{% endif %}
 <body>
-   <nav class="navbar navbar-default">
-  <div class="container-fluid">
-   
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" id="brandname" href="/">BEEtLyme</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="nav_text"><a href="/">About<span class="sr-only">(current)</span></a></li>
-        <li class="nav_text"><a href="/login">Login</a></li>
-        <li class="nav_text"><a href="/profile">Profile</a></li>
-        
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li class="nav_text"><a href="/set">Set</a></li>
-        <li class="nav_text"><a href="/track">Track</a></li>
-        <li class="nav_text"><a href="/graph_options">Graph</a></li>
-
-      </ul>
-    </div>
-  </div>
-</nav>
 
     {% for flash in get_flashed_messages() %}
       {{ flash }}
