--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,6 +9,7 @@
   <div class="col-xs-1"></div>
 </div>
 
+{% if not session['user_id'] %}
 <div class="row">
   <div class="col-xs-1"></div>
   <div class="col-xs-5">
@@ -21,5 +22,5 @@
   </div>
   <div class="col-xs-1"></div>
 </div>
-
+{% endif %}
 {% endblock %}
