--- a/templates/set.html
+++ b/templates/set.html
@@ -21,6 +21,7 @@
     <label for="symptom">Choose Symptom to track:</label>
     <input type='text' id='autosymptom' name='symptom' placeholder='search' required>
     <button id='submit-symp' class="btn btn-default">Submit</button>
+    <br>
     <p id='set-symp'></p>
     </form>
   </div>
@@ -30,6 +31,7 @@
     <label for="treatment">Choose Treatment to track:</label>
     <input type='text' id='autotreatment' name='treatment' placeholder='search' required>
     <button id='submit-treat' class="btn btn-default">Submit</button>
+    <br>
     <p id='set-treat'></p>
 
     </form>
@@ -96,6 +98,7 @@ $('#submit-symp').on("click", submitSetSymptom);
 //sets success button at end of set treat ajax call.
 function successTreatMessage(result) {
     $('#submit-treat').toggleClass("btn btn-success").html("Success");
+    $('#set-treat').html(result);
 }
 
 //ajax call to set treatment
