--- a/templates/track.html
+++ b/templates/track.html
@@ -36,6 +36,7 @@ label{margin-left: 20px;}
             {% endfor %}
             </ul>
             <button id='symp-submit' class="btn btn-default">Submit</button>
+            <p id='symptom-result'></p>
         </form>
   </div>
   <div class="col-xs-4">
@@ -49,6 +50,7 @@ label{margin-left: 20px;}
             {% endfor %}
             </ul>
             <button id='treat-submit' class="btn btn-default">Submit</button>
+            <p id='treatment-result'></p>
         </form>
     </div>
     <div class="col-xs-2"></div>
@@ -65,6 +67,7 @@ label{margin-left: 20px;}
       <label for="comment">Journal Entry (optional):</label>
       <textarea class="form-control" name='comment' rows="5" id="comment"></textarea>
       <button id='comment-submit' class="btn btn-default">Submit</button>
+      <p id='journal-result'></p>
     </div>
     <div class="col-xs-2"></div>
 </div>
@@ -78,9 +81,12 @@ $(function () {
         todayHighlight: true
   }).datepicker('update', new Date());
 });
+
 //success function for sending success message for tracking symptom ajax call
 function sympSuccessMessage(result) {
     $('#symp-submit').toggleClass("btn btn-success").html("Success");
+    $('#symptom-result').html(result);
+
 }
 //ajax call sending symptom values to app route
 function submitSymptomValues(evt) {
@@ -96,7 +102,8 @@ $('#symp-submit').on("click", submitSymptomValues);
 
 //success function for treatment ajax call
 function treatSuccessMessage(result) {
-    $('#treat-submit').toggleClass("btn btn-success").html("Success");
+    $('#treat-submit').toggleClass("btn btn-success").html("Success")
+    $('#treatment-result').html(result);
 }
 //ajax call for sending treatment values to app route
 function submitTreatmentValues(evt) {
@@ -114,12 +121,14 @@ $('#treat-submit').on('click', submitTreatmentValues);
 //success function for comment ajax call
 function commentSuccessMessage(result) {
     $('#comment-submit').toggleClass("btn btn-success").html("Success");
+    $('#journal-result').html(result);
+
 }
 //ajax call for sending comment text to app route
 function submitComment(evt) {
     evt.preventDefault();
     var date = $('input.form-control').val();
-    var commentInput = $('#comment').serialize() + "&date=" + date
+    var commentInput = $('#comment').serialize() + "&date=" + date;
     $.post("/log_comment",
             commentInput,
             commentSuccessMessage)
