--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <form action='/login' method="POST">
 
       <input type='text' name='email' placeholder='email' required>
-      <input type='text' name='password' placeholder='password' required>
+      <input type='password' name='password' placeholder='password' required>
       <input type='submit' class="btn btn-default" value='login'>
 
     </form>
