--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,7 +28,7 @@
           <input type='text' id='fname' name='fname' placeholder='First Name'><br><br>
           <input type='text' id='lname' name='lname' placeholder='Last Name'><br><br>
           <input type='text' id='email' name='email' placeholder='email address'><br><br>
-          <input type='text' id='old-password' name='current-password' placeholder='current password' required><br><br>
+          <input type='password' id='old-password' name='current-password' placeholder='current password' required><br><br>
           <input type='text' id='new-password' name='new-password' placeholder='new password'><br><br>
           <input type='submit' class="btn btn-default" value='Update'><br><br>
 
