--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,11 +14,11 @@
   <div class="col-xs-1"></div>
   <div class="col-xs-5">
     <h4>New to the page?</h4>
-    <a href="/register" class="btn btn-info" role="button">Register</a>
+    <a href="/register" class="btn btn-default" role="button">Register</a>
   </div>
   <div class="col-xs-5">
     <h4>Already a User?</h4>
-    <a href="/login" class="btn btn-info" role="button">Login</a>
+    <a href="/login" class="btn btn-default" role="button">Login</a>
   </div>
   <div class="col-xs-1"></div>
 </div>
