--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,10 +29,26 @@
           <input type='text' id='lname' name='lname' placeholder='Last Name'><br><br>
           <input type='text' id='email' name='email' placeholder='email address'><br><br>
           <input type='password' id='old-password' name='current-password' placeholder='current password' required><br><br>
-          <input type='text' id='new-password' name='new-password' placeholder='new password'><br><br>
+          <input type='password' id='new-password' name='new-password' placeholder='new password'><br><br>
           <input type='submit' class="btn btn-default" value='Update'><br><br>
 
       </form> 
+      <br>
+      <br>
+    </div>
+</div>
+<div class="row">
+  <div class="col-xs-2"></div>
+  <div class="col-xs-3">
+    <br><br>
+      <button class="btn btn-default" value="Set new Sx or Tx" onclick="window.location.href='/set'"\> Set New Sx or Tx </button><br><br>
+    
+  </div>
+  <div class="col-xs-3">
+    <br><br>
+      <button class="btn btn-default" value="Set new Sx or Tx" onclick="window.location.href='/track'"\> Track Sx or Tx </button><br><br>
+  </div>
+  <div class="col-xs-4"></div>
 </div>
 <div class="row">
   <div class="col-xs-2"></div>
