--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -6,13 +6,13 @@
 <div class="row">
   <div class="col-xs-2"></div>
   <div class="col-xs-8">
-    <h1>New User Reistration</h1>
+    <h1>Create an account!</h1>
 
       <form action='/register' id='register' method="POST">
           <input type='text' id='fname' name='fname' placeholder='First Name' required>
           <input type='text' id='lname' name='lname' placeholder='Last Name' required>
           <input type='text' id='email' name='email' placeholder='email address' required>
-          <input type='text' id='password' name='password' placeholder='password' required>
+          <input type='password' id='password' name='password' placeholder='password' required>
           <input type='submit' class="btn btn-default" value='register'>
 
       </form>  
