last touches before demo screencast

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,8 +4,12 @@
   <div class="col-xs-1"></div>
   <div class="col-xs-10">
     <h1>Welcome to BEEtLyme</h1>
-    <h3>Allowing those treating Lyme disease to easily track symptoms and treatments, and get visual feedback about the efficacy of treatments over time.  While this application was made specifically for tracking Bee Venom Therapy as a treatment, other treatments may be tracked as well.</h3>
+    <h3>Allowing those treating Lyme disease to easily track symptoms and treatments, and get visual feedback about the efficacy of treatments over time.  <br>
+      While this application was made specifically for tracking Bee Venom Therapy as a treatment, other treatments may be tracked as well.</h3>
+    <br>
+    <br>
   </div>
+
   <div class="col-xs-1"></div>
 </div>
 
@@ -15,10 +19,12 @@
   <div class="col-xs-5">
     <h4>New to the page?</h4>
     <a href="/register" class="btn btn-default" role="button">Register</a>
+    <br><br>
   </div>
   <div class="col-xs-5">
     <h4>Already a User?</h4>
     <a href="/login" class="btn btn-default" role="button">Login</a>
+    <br><br>
   </div>
   <div class="col-xs-1"></div>
 </div>
