--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -28,5 +28,8 @@ input[type='checkbox'] {
 
 .container {
     background: rgba(255, 255, 255, 0.50);
+    padding: 15px;
+    margin-bottom: 50px;
+    margin-top: 5px;
 }
 
