--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,51 +5,48 @@
   <div class="col-xs-6">
     <h2>Welcome back {{ user.fname }} {{ user.lname }}</h2>
     <br>
-    <h3>Here are the symptoms you are currently tracking:</h3>
+    <h3>Here are the Symptoms (Sx) you are currently tracking:</h3>
         <ul>{% for symptom in symptoms %}
           <li>{{ symptom.symptom.name }}</li>
           {% endfor %}
         </ul>
         <br>
-    <h3>And the treatments you are currently tracking:</h3>
+    <h3>And the Treatments (Tx) you are currently tracking:</h3>
         <ul>{% for treatment in treatments %}
         <li>{{ treatment.treatment.name }}</li>
         {% endfor %}
         </ul>
   </div>
-  <div class="col-xs-4">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+  <div class="col-xs-4"></div>
+</div>
+<div class=row>
+  <div class="col-xs-2"></div>
+  <div class="col-xs-3">
+    <br><br>
     <button id='update-button' class="btn btn-default">Update User Info</button><br><br>
     <form action='/update' id='update-form' type='hidden' method="POST">
-          <input type='text' id='fname' name='fname' placeholder='First Name'><br><br>
-          <input type='text' id='lname' name='lname' placeholder='Last Name'><br><br>
-          <input type='text' id='email' name='email' placeholder='email address'><br><br>
-          <input type='password' id='old-password' name='current-password' placeholder='current password' required><br><br>
-          <input type='password' id='new-password' name='new-password' placeholder='new password'><br><br>
-          <input type='submit' class="btn btn-default" value='Update'><br><br>
+          <input type='text' id='fname' name='fname' placeholder='First Name'>
+          <input type='text' id='lname' name='lname' placeholder='Last Name'>
+          <input type='text' id='email' name='email' placeholder='email address'>
+          <input type='password' id='old-password' name='current-password' placeholder='current password' required>
+          <input type='password' id='new-password' name='new-password' placeholder='new password'>
+          <input type='submit' class="btn btn-default" value='Update'>
 
       </form> 
       <br>
       <br>
-    </div>
-</div>
-<div class="row">
-  <div class="col-xs-2"></div>
+  </div>
   <div class="col-xs-3">
     <br><br>
       <button class="btn btn-default" value="Set new Sx or Tx" onclick="window.location.href='/set'"\> Set New Sx or Tx </button><br><br>
-    
   </div>
   <div class="col-xs-3">
     <br><br>
       <button class="btn btn-default" value="Set new Sx or Tx" onclick="window.location.href='/track'"\> Track Sx or Tx </button><br><br>
   </div>
-  <div class="col-xs-4"></div>
+  <div class="col-xs-1"></div>
 </div>
+
 <div class="row">
   <div class="col-xs-2"></div>
   <div class="col-xs-8">
